--- a/about.html
+++ b/about.html
@@ -1,12 +1,4 @@
 <!DOCTYPE html>
-<style>
-  .body{
-    margin-left:150px;
-  }
-  .body1{
-    margin-left:230px;
-  }
-</style>
 
 <html>
 
@@ -34,12 +26,12 @@
     <div class="main-content">
       <div class="box first-half">
           <img class="Hidden_Genius body" src="Hidden_Genius.png" width="450" height="150">
-        <p class="body">Hello my name is Dawit Gemeda. I am from San Leandro CA. I personally decided on this buisness plan because of the problems sports equipments cause. The problems are thing such as overinflation, deflation, hard balls, uneven balls, damaged pieces, and etc. These all can injure people and my company builds and develops equipment to cope with these problems and build sports equipment based off of the customers prefrences to give them a better experience. </p>
+        <p>Hello my name is Dawit Gemeda. I am from San Leandro CA. I personally decided on this buisness plan because of the problems sports equipments cause. The problems are thing such as overinflation, deflation, hard balls, uneven balls, damaged pieces, and etc. These all can injure people and my company builds and develops equipment to cope with these problems and build sports equipment based off of the customers prefrences to give them a better experience. </p>
       </div>
 
       <div class="box second-half">
-        <img class="Me_Img body" src="Me_Img.png" width="350" height="550">
-        <button class="body1" type="button">Return</button>
+        <img class="Me_Img body" src="Me_Img.png" width="350" height="500">
+        <a href="index.html">Return-></a>
       </div>
     </div>
   </div>
