--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Service</title>
+  <title>Contact</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-
-<body>
-
   
-  <script src="script.js"></script>
-  <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
+<body>
+  <div class="Contact-box" style="text-align: center;" >
+    <div class="Contact-Name">
+    <div class="Contact-LastName">
+      
+  </div>
+  
 </body>
 
 </html>
