--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
     <div class="Info-box" >
 
       <div class="nav-item hidden-box" >
-        <a  href="https://www.hiddengeniusproject.org/">Hidden Genius Project </a>
+        <a class="Hidden" href="https://www.hiddengeniusproject.org/">Hidden Genius Project </a>
       </div>
       <div class="nav-item Ig-box" >
-       <a href="https://www.instagram.com/">instagram: dawit_gemeda</a>
+       <a class="Ig" href="https://www.instagram.com/">instagram: dawit_gemeda</a>
       </div>
       <div class="nav-item Num-box" >
         Number: 341-222-9398
@@ -31,7 +31,7 @@
 
       <div class="box second-half">
         <img class="Me_Img body" src="Me_Img.png" width="350" height="500">
-        <a href="index.html">Return-></a>
+        <a class="Return" href="index.html">Return-></a>
       </div>
     </div>
   </div>
